<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RxAndroidExamples</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_simple_observable">Simple Observable</string>
    <string name="action_observable_actions">Subscribe (actions)</string>
    <string name="action_observable_actions2">Subscribe (actions(2))</string>
    <string name="action_observable_subscriber">Subscribe (subscriber)</string>
    <string name="action_observable_function">Subscribe (function)</string>
    <string name="action_operators">Operators</string>
    <string name="action_try_operator">Try operator</string>
    <string name="action_subjects">Subjects</string>
    <string name="action_github">Get github info</string>
    <string name="action_retrofit">Retrofit</string>

</resources>
