<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/action_clear"
          android:icon="@android:drawable/ic_menu_close_clear_cancel"
          android:title=""
          android:orderInCategory="1"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_simple_observable"
          android:title="@string/action_simple_observable"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_observable_actions"
          android:title="@string/action_observable_actions"
          android:orderInCategory="101"
          app:showAsAction="never"/>
    <item android:id="@+id/action_observable_subscriber"
          android:title="@string/action_observable_subscriber"
          android:orderInCategory="102"
          app:showAsAction="never"/>
    <item android:id="@+id/action_observable_function"
          android:title="@string/action_observable_function"
          android:orderInCategory="103"
          app:showAsAction="never"/>
    <item android:id="@+id/action_operators"
          android:title="@string/action_operators"
          android:orderInCategory="200"
          app:showAsAction="never"/>
    <item android:id="@+id/action_subjects"
          android:title="@string/action_subjects"
          android:orderInCategory="200"
          app:showAsAction="never"/>
    <item android:id="@+id/action_retrofit"
          android:title="@string/action_retrofit"
          android:orderInCategory="200"
          app:showAsAction="never"/>
</menu>
